[Yellowpage] 1. Fix problem of typing english in input field can't change to uppercase on Android 6.0.1 2. Fix problem of font size too small in phone book

--- a/APP/NewYellowPage/www/css/index.css
+++ b/APP/NewYellowPage/www/css/index.css
@@ -49,8 +49,10 @@
 
 #myPhonebookList p {
     margin: 0px 2px;
-    font-size: 12px;
+    font-size: 3.35vw;
 }
+
+#myPhonebookList li{ padding: 2% 0;}
 
 .header-style .ui-bar {
     padding: 0;
@@ -76,7 +78,7 @@
 .vice-header .title {
     font-family: Arial;
     color: #666667;
-    font-size: 2.3VH;
+    font-size: 3.5vw;
     font-weight: bold;
 }
 
